<resources>
    <string name="app_name">QR &amp; Bar Code Scanner</string>
    <string name="file_provider_authority" translatable="false">com.bayzid.qrbarcodescanner2022.fileprovider</string>
    <string name="admob_app_id">ca-app-pub-1148814945441421~2029208790</string>
    <string name="admob_banner_ad_unit_id">ca-app-pub-1148814945441421/4169105219</string>
<!--    <string name="admob_interstitial_ad_unit_id">ca-app-pub-1148814945441421/7908770173</string>-->
<!--    test-->
<!--    <string name="admob_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="admob_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
<!--    test-->
    <string name="delete">Delete</string>
    <!--Essentials-->
    <string name="please_wait">Please Wait…</string>
    <!--Dummy-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--Home page-->
    <string name="generate">Generate</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="toolbar_title_generate">Generate QR Code</string>
    <string name="toolbar_title_scan">Code Scanner</string>
    <string name="toolbar_title_history">History</string>

    <!--Settings page-->
    <string name="settings">Settings</string>
    <string name="play_sound">Play Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="save_history">Save History</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="refer">Refer &amp; Reward</string>
    <string name="rate">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--Generate page-->
    <string name="hint_enter_your_text">Enter Your Text</string>
    <string name="error_provide_proper_content_and_type">Please provide proper information before generating code</string>
    <string name="error_barcode_content_limit">Barcode contents length should be between 1 and 80</string>
    <string name="error_qrcode_content_limit">QR Code contents length should be between 1 and 1000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Generated QR Code page-->
    <string name="toolbar_title_generated_qr_code">Generated QR Code</string>
    <string name="code_type">Type: %s</string>
    <string name="content">Content: %s</string>
    <string name="saved_the_code_successfully">Saved the code successfully</string>
    <string name="failed_to_save_the_code">failed to save the code</string>
    <string name="failed_to_share_the_code">failed to share the code</string>
    <string name="file_name_body">%s_%s</string>
    <string name="generated_qr_code_already_exists">Generated code already exists in the local storage</string>
    <string name="share_code_using">Share code using…</string>

    <!--Scan page-->
    <string name="flash">Flash</string>
    <string name="scan_gallery">Scan Gallery</string>
    <string name="error_occured_while_scanning">Error occurred while scanning</string>
    <string name="error_could_not_load_the_image">Could not load the image</string>
    <string name="error_did_not_find_any_content">Did not find any content. Try again with different image</string>

    <!--Scan result page-->
    <string name="toolbar_title_scan_result">Scan Result</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="created_time">Created Time: %s</string>
    <string name="scanned_qr_code_content">Scanned QR code content</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <!--History page-->
    <string name="code_scan">%s Scan</string>
    <string name="no_item">No Data Found</string>

    <!--Picked image from gallery page-->
    <string name="get_value">Get value</string>
    <string name="toolbar_title_uploaded_image">Uploaded Image</string>
    <string name="dolor_sit_amet">Dolor sit amet consectetur adipiscing elit sed do</string>
    <string name="app_version_v1_1">App Version : v1.0.0</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="blank" />
</resources>