<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.bayzid.qrbarcodescanner2022.helper.Statusbar
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0sp"
            app:layout_constraintBottom_toTopOf="@+id/scroll_view_body_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_bar"
            app:title="@string/toolbar_title_scan_result" />

        <ScrollView
            android:id="@+id/scroll_view_body_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_body_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_scanned_code"
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:layout_marginBottom="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/card_view_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:background="@color/white"
                    app:cardElevation="5sp"
                    app:cardCornerRadius="15sp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_scanned_code">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16sp"
                        android:background="@color/white">

                        <TextView
                            android:id="@+id/text_view_content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toTopOf="@+id/text_view_type"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_view_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8sp"
                            android:gravity="center"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toTopOf="@+id/text_view_time"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_view_content" />

                        <TextView
                            android:id="@+id/text_view_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8sp"
                            android:gravity="center"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_view_type" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_description"
                    android:weightSum="1"
                    android:layout_margin="15sp">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/scan_view_share"
                        android:layout_width="0sp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10sp"
                        app:cardElevation="5sp"
                        android:layout_margin="10sp">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="70sp"
                            android:src="@drawable/ic_share"
                            android:padding="10sp"
                            android:layout_gravity="center"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/text_view_open_in_browser"
                        android:layout_width="0sp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10sp"
                        app:cardElevation="5sp"
                        android:layout_margin="10sp">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="70sp"
                            android:src="@drawable/ic_websearch"
                            android:layout_gravity="center"
                            android:padding="10sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/open_in_browser"
                            android:gravity="center"
                            android:layout_gravity="bottom"
                            android:textColor="@color/dark"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:id="@+id/copy_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10sp"
                    app:cardElevation="0dp"
                    android:layout_marginStart="25sp"
                    android:layout_marginEnd="25sp"
                    app:layout_constraintTop_toBottomOf="@id/layout1">

                    <TextView
                        android:id="@+id/text_copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/textColor"
                        android:drawableStart="@drawable/ic_link"
                        android:fontFamily="@font/montserrat_alternates"
                        android:padding="10sp"
                        android:text="  Copy Context  "
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/admob_banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view_body_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>